Refactor: Migrate to CQRS pattern (#5)
* refactor(Register): migrate register use case to command-based approach and restructure package

- Replaced direct parameter passing with `RegisterUserCommand` for improved validation and maintainability.
- Introduced `IRegisterUseCase` interface for abstraction.
- Restructured related classes under `usecases.register` package.
- Updated `AuthController` and tests to utilize command-based use case.

* refactor(Register): migrate register use case to command-based approach and restructure package

- Replaced direct parameter passing with `RegisterUserCommand` for improved validation and maintainability.
- Introduced `IRegisterUseCase` interface for abstraction.
- Introduced `Command` `CommandBusDispatcher` and `CommandHandler` Interface to let the controller just call the dispatcher
- Restructured related classes under `usecases.register` package.
- Updated `AuthController` and tests to utilize command-based use case.

* refactor(login&refresh): migrate login and refreshToken use case to command-based approach and restructure package

* refactor(fetch&complete first connection): migrate fetch and complete first connection use case to command/query - based approach and restructure package

* refactor(applications): migrate create and fetch application use cases to command/query - based approach and restructure package

* refactor(applications): migrate create and fetch application use cases to command/query - based approach and restructure package

- remove broken tests

* refactor(applications): migrate share and revoke sharing application use cases to command/query - based approach and restructure package

* refactor(teams): migrate create and invitation-related use cases to command-based approach and restructure packages

- Replaced direct parameter passing with `CreateTeamCommand` for improved validation and abstraction.
- Introduced `ICreateTeamUseCase` interface and refactored `CreateTeamUseCase`.
- Restructured packages 