@@ -2,6 +2,7 @@ package com.langa.backend.domain.applications.usecases;
 
 import com.langa.backend.domain.applications.Application;
 import com.langa.backend.domain.applications.repositories.ApplicationRepository;
+import com.langa.backend.domain.applications.usecases.fetch.GetApplicationsUseCase;
 import com.langa.backend.domain.applications.valueobjects.ApplicationInfo;
 import com.langa.backend.domainexchange.user.UserAccountService;
 import org.junit.jupiter.api.Test;
@@ -53,7 +54,7 @@ class GetApplicationsUseCaseTest {
         List<ApplicationInfo> result = useCase.getApplications(OWNER);
 
         assertEquals(2, result.size());
-        assertEquals("Langa1", result.get(0).name());
+        assertEquals("Langa1", result.getFirst().name());
         verify(applicationRepository, times(1)).findByOwner(OWNER);
     }
 }
